--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Index.cshtml
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_factura", new { fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin })
+            @Html.Action("GridViewPartial_guias_remision", new { fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin })
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
