--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Nuevo.cshtml
@@ -21,34 +21,264 @@
 
     }
 
-    <div class="modal fade" id="OpModal" role="dialog">
-        <div class="modal-dialog modal-lg">
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Facturas sin guias</h4>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-8">
+                <div class="form-group">
+                    <label for="IdSucursal">Sucursal*</label>
+                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control", @id = "IdSucursal" })
+                    @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
-                <div class="modal-body">
-                    @Html.Action("GridViewPartial_FacturasSinGuia")
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="IdPuntoVta">Punto de venta*</label>
+                    @Html.DropDownListFor(q => q.IdBodega, new SelectList(ViewBag.lst_punto_venta, "IdPuntoVta", "nom_PuntoVta"), new { @class = "form-control", @id = "IdPuntoVta" })
+                    @Html.ValidationMessageFor(q => q.IdBodega, "", new { @class = "text-danger" })
                 </div>
             </div>
+        </div>
+     </div>
+     
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="IdCliente">Cliente*</label>
+                    @Html.Partial("_CmbCliente_Guia", Model)
+                    @Html.ValidationMessageFor(q => q.IdCliente, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="IdVendedor">Transportista*</label>
+                    @Html.DropDownListFor(q => q.IdTransportista, new SelectList(ViewBag.lst_transportista, "IdTransportista", "Nombre"), new { @class = "form-control", @id = "IdTransportista" })
+                    @Html.ValidationMessageFor(q => q.IdTransportista, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="vt_serie1">Placa*</label>
+                    @Html.TextBoxFor(q => q.placa, new { @class = "form-control", @id = "placa" })
+                    @Html.ValidationMessageFor(q => q.placa, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            </div>
+        </div>
 
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="vt_serie1">Establecimiento*</label>
+                    @Html.TextBoxFor(q => q.Serie1, new { @class = "form-control", @id = "Serie1" })
+                    @Html.ValidationMessageFor(q => q.Serie1, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="vt_serie2">Pto. Emisión*</label>
+                    @Html.TextBoxFor(q => q.Serie2, new { @class = "form-control", @id = "Serie2" })
+                    @Html.ValidationMessageFor(q => q.Serie2, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="vt_NumFactura"># Documento*</label>
+                    @Html.TextBoxFor(q => q.NumGuia_Preimpresa, new { @class = "form-control", @id = "NumGuia_Preimpresa" })
+                    @Html.ValidationMessageFor(q => q.NumGuia_Preimpresa, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="">Fecha</label>
+                    <div class="input-group date">
+                        <div class="input-group-addon">
+                            <i class="fa fa-calendar"></i>
+                        </div>
+                        @Html.TextBoxFor(q => q.gi_fecha, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_oc" })
+                        @Html.ValidationMessageFor(q => q.gi_fecha, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-8">
+                    <div class="form-group">
+                        <label for="pf_observacion">Direcion origen</label>
+                        @Html.TextBoxFor(q => q.Direccion_Origen, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(q => q.Direccion_Origen, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label for="">Inicio traslado</label>
+                        <div class="input-group date">
+                            <div class="input-group-addon">
+                                <i class="fa fa-calendar"></i>
+                            </div>
+                            @Html.TextBoxFor(q => q.gi_FechaInicioTraslado, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_oc" })
+                            @Html.ValidationMessageFor(q => q.gi_FechaInicioTraslado, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-8">
+                    <div class="form-group">
+                        <label for="pf_observacion">Direcion destino</label>
+                        @Html.TextBoxFor(q => q.Direccion_Destino, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(q => q.Direccion_Destino, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label for="">Fin traslado</label>
+                        <div class="input-group date">
+                            <div class="input-group-addon">
+                                <i class="fa fa-calendar"></i>
+                            </div>
+                            @Html.TextBoxFor(q => q.gi_FechaFinTraslado, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_oc" })
+                            @Html.ValidationMessageFor(q => q.gi_FechaFinTraslado, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="pf_observacion">Observación</label>
+                    @Html.TextAreaFor(q => q.gi_Observacion, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.gi_Observacion, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="pf_observacion">Detalle</label>
+                    @Html.Action("GridViewPartial_guias_remision_det")
+                </div>
+            </div>
         </div>
     </div>
+
+
+        <div class="modal fade" id="OpModal" role="dialog">
+            <div class="modal-dialog modal-lg">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Facturas sin guias</h4>
+                    </div>
+                    <div class="modal-body">
+                        @Html.Action("GridViewPartial_FacturasSinGuia")
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+        <div class="box-footer">
+            <button type="submit" class="btn btn-primary">Guardar</button>
+            <a class="btn btn-default" href="@Url.Action("Index","GuiaRemision",new { Area = "Facturacion" },null)">Cancelar</a>
+        </div>
+        @section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }
+        }
+
+
+
+<script>
+    $(function () {
+        CargarPuntosDeVenta();
+        GetUltimoDocumento();
+        //Date picker
+        $('#vt_fecha').datepicker({
+            autoclose: true
+        })
+       
+        $("#IdSucursal").change(function () {
+            CargarPuntosDeVenta();
+            GetUltimoDocumento();
+        });
+        $("#IdPuntoVta").change(function () {
+            GetUltimoDocumento();
+        });
+       
+    });
+
+    function MostrarModal() {
+        GridView_LoteFactura.PerformCallback();
+        $("#OpModal").modal("show");
+    }
+
     
 
-    <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","GuiaRemision",new { Area = "Facturacion" },null)">Cancelar</a>
-    </div>
-    @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
+  
+    function CargarPuntosDeVenta() {
+        $("#IdPuntoVta").empty();
+        var datos = {
+            IdSucursal: $("#IdSucursal").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("CargarPuntosDeVenta", "Factura",new { Area = "Facturacion"})',
+            async: false,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $.each(data, function (i, row) {
+                    $("#IdPuntoVta").append("<option value=" + row.IdPuntoVta + ">" + row.nom_PuntoVta + "</option>");
+                    $("#IdPuntoVta").val(1);
+                });
+            },
+            error: function (error) {
+            }
+        });
     }
-}
-<script>
-   
+
+       function GetUltimoDocumento() {
+        var datos = {
+            IdSucursal: $("#IdSucursal").val(),
+            IdPuntoVta: $("#IdPuntoVta").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("GetUltimoDocumento", "Factura",new { Area = "Facturacion"})',
+            async: false,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $("#vt_serie1").val(data.Establecimiento);
+                $("#vt_serie2").val(data.PuntoEmision);
+                $("#vt_NumFactura").val(data.NumDocumento);
+            },
+            error: function (error) {
+            }
+        });
+        }
+
+
+
 </script>
