vista para guia

--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Nuevo.cshtml
@@ -227,7 +227,7 @@
     });
 
     function MostrarModal() {
-        GridView_LoteFactura.PerformCallback();
+        GridViewPartial_FacturasSinGuia.PerformCallback();
         $("#OpModal").modal("show");
     }
 
@@ -242,7 +242,7 @@
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("CargarPuntosDeVenta", "Factura",new { Area = "Facturacion"})',
+            url: '@Url.Action("CargarPuntosDeVenta", "GuiaRemision",new { Area = "Facturacion"})',
             async: false,
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
@@ -265,14 +265,14 @@
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("GetUltimoDocumento", "Factura",new { Area = "Facturacion"})',
+            url: '@Url.Action("GetUltimoDocumento", "GuiaRemision",new { Area = "Facturacion"})',
             async: false,
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                $("#vt_serie1").val(data.Establecimiento);
-                $("#vt_serie2").val(data.PuntoEmision);
-                $("#vt_NumFactura").val(data.NumDocumento);
+                $("#Serie1").val(data.Establecimiento);
+                $("#Serie2").val(data.PuntoEmision);
+                $("#NumGuia_Preimpresa").val(data.NumDocumento);
             },
             error: function (error) {
             }
