--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_CmbCliente_Guia.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_CmbCliente_Guia.cshtml
@@ -16,6 +16,8 @@
 
         settings.Properties.Columns.Add("IdEntidad", "ID", 10);
         settings.Properties.Columns.Add("pe_nombreCompleto", "Cliente", 90);
+        settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){MostrarModal();}";
+
     })
     .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.GuiaRemisionController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Facturacion.Controllers.GuiaRemisionController().get_info_bajo_demanda)
     .Bind(Model.IdCliente);
