--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_GridViewPartial_guias_remision.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_GridViewPartial_guias_remision.cshtml
@@ -86,7 +86,7 @@
         settings.Columns.Add("Serie1", "Estb.").Width = Unit.Percentage(5);
         settings.Columns.Add("Serie2", "Pto. Emi").Width = Unit.Percentage(5);
         settings.Columns.Add("NumGuia_Preimpresa", "Numero").Width = Unit.Percentage(5);
-        settings.Columns.Add("NomContacto", "Cliente").Width = Unit.Percentage(30);
+        settings.Columns.Add("pe_nombreCompleto", "Cliente").Width = Unit.Percentage(30);
         settings.Columns.Add("gi_Observacion", "Observación").Width = Unit.Percentage(30);
         settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(5);
     });
