--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_PFactura_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_PFactura_det.cshtml
@@ -4,7 +4,7 @@
     {
         settings.Name = "GridView_PFactura_det";
         settings.CallbackRouteValues = new { Controller = "Factura", Action = "GridViewPartial_PFactura_det", Area = "Facturacion"};
-        settings.KeyFieldName = "Secuencial";
+        settings.KeyFieldName = "secuencial";
 
         settings.Width = Unit.Percentage(100);
 
@@ -32,7 +32,12 @@
         settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
-
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IdProforma";
+            column.Caption = "# Proforma";
+            column.Width = Unit.Percentage(8);
+        });
         settings.Columns.Add(column =>
         {
             column.FieldName = "pr_descripcion";
@@ -46,89 +51,51 @@
             column.FieldName = "vt_cantidad";
             column.Caption = "cantidad";
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(10);
-            column.EditorProperties().SpinEdit(q =>
-            {
-                q.MinValue = 0;
-                q.Width = Unit.Percentage(100);
-            });
+            column.Width = Unit.Percentage(8);
         });
         settings.Columns.Add(column =>
         {
             column.FieldName = "vt_Precio";
             column.Caption = "Precio";
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(10);
-            column.EditorProperties().SpinEdit(q =>
-            {
-                q.MinValue = 0;
-                q.Width = Unit.Percentage(100);
-            });
-            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.Width = Unit.Percentage(8);
         });
         settings.Columns.Add(column =>
         {
             column.FieldName = "vt_PorDescUnitario";
             column.Caption = "% Desc. uni.";
-            column.Width = Unit.Percentage(10);
-            column.EditorProperties().SpinEdit(q =>
-            {
-                q.MinValue = 0;
-                q.Width = Unit.Percentage(100);
-            });
-            column.EditFormSettings.Visible = DefaultBoolean.True;
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "IdCod_Impuesto_Iva";
-            column.Caption = "Impuesto";
-            column.Width = Unit.Percentage(60);
-            column.Visible = false;
-            column.EditorProperties().ComboBox(p =>
-            {
-                p.Columns.Add("nom_impuesto", "Descripción").Width = Unit.Percentage(100);
-                p.TextField = "nom_impuesto";
-                p.ValueField = "IdCod_Impuesto";
-                p.ValueType = typeof(string);
-                p.DataSource = ViewBag.lst_impuesto;
-            });
-            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.Width = Unit.Percentage(8);
         });
         settings.Columns.Add(column =>
         {
             column.FieldName = "vt_PrecioFinal";
             column.Caption = "Precio final";
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(10);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.Width = Unit.Percentage(8);
         });
         settings.Columns.Add(column =>
         {
             column.FieldName = "vt_Subtotal";
             column.Caption = "Subtotal";
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(10);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.Width = Unit.Percentage(8);
         });
         settings.Columns.Add(column =>
         {
             column.FieldName = "vt_iva";
             column.Caption = "I.V.A.";
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(10);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.Width = Unit.Percentage(8);
         });
         settings.Columns.Add(column =>
         {
             column.FieldName = "vt_total";
             column.Caption = "Total";
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(10);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.Width = Unit.Percentage(8);
         });
 
         settings.ClientSideEvents.SelectionChanged = "OnSelectionChanged";
-        settings.Settings.ShowFooter = true;
     });
 }
 @grid.Bind(Model).GetHtml()
